all file changed

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "foodfire-server",
+  "name": "foodapp-server",
   "version": "1.0.0",
-  "description": "A Node.js web server that fetches data from a third-party (Swiggy) API and exposes it to a client (FoodFire) app.",
+  "description": "A Node.js web server that fetches data from a third-party (Swiggy) API and exposes it to a client (foodapp) app.",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/chetannada/FoodFire-Server.git"
+    "url": "git+https://github.com/sudhabnrj/foodapp-server.git"
   },
   "author": "Chetan Nada",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/chetannada/FoodFire-Server/issues"
+    "url": "https://github.com/sudhabnrj/foodapp-server.git"
   },
-  "homepage": "https://github.com/chetannada/FoodFire-Server#readme",
+  "homepage": "https://github.com/sudhabnrj/foodapp-server#readme",
   "dependencies": {
     "cors": "^2.8.5",
     "cross-fetch": "^4.0.0",
